--- a/extra_task.html
+++ b/extra_task.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <h4>7.20</h4>
+    <div id="content"></div>
+    <!-- <h4>7.20</h4>
     <ul class="ul-element720"></ul>
     <h4>7.21</h4>
     <ul class="ul-element721"></ul>
@@ -29,7 +30,7 @@
     <h4>7.29</h4>
     <ul class="ul-element729"></ul>
     <h4>7.30</h4>
-    <ul class="ul-element730"></ul>
+    <ul class="ul-element730"></ul> -->
     <script src="extra_task.js"></script>
 </body>
 
